Configuring to SCSS instead of plain CSS

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<title>a-guide-to-marketplaces | BOOKIZA.JS </title>
 	<link rel="shortcut icon" href="crust/images/favicon.png">
 
-	<link id="default" rel="stylesheet" type="text/css" media="screen" href="crust/css/default.css" />
+	<!-- <link rel="stylesheet" type="text/css" media="screen" href="crust/css/default.css"/> -->
 	<link rel="stylesheet" type="text/css" media="screen" href="crust/style/book.css" />
-	<link rel="stylesheet" type="text/css" media="screen" href="crust/css/plotter.css" />
+	<!-- <link rel="stylesheet" type="text/css" media="screen" href="crust/css/plotter.css" /> -->
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
