--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>a-guide-to-marketplaces | BOOKIZA.JS </title>
+	<title> A Guide to Marketplaces | BOOKIZA.JS </title>
 	<link rel="shortcut icon" href="crust/images/favicon.png">
 
 	<!-- <link rel="stylesheet" type="text/css" media="screen" href="crust/css/default.css"/> -->
@@ -33,10 +33,10 @@
 					<path fill="#fff" d="M14 20c0.128 0 0.256-0.049 0.354-0.146 0.195-0.195 0.195-0.512 0-0.707l-8.646-8.646 8.646-8.646c0.195-0.195 0.195-0.512 0-0.707s-0.512-0.195-0.707 0l-9 9c-0.195 0.195-0.195 0.512 0 0.707l9 9c0.098 0.098 0.226 0.146 0.354 0.146z"></path>
 				</svg>
 			</a>
-			<div class='page'><iframe src='build/renders/page-1.html'></iframe></div><div class='page'><iframe src='build/renders/page-2.html'></iframe></div><div class='page'><iframe src='build/renders/page-3.html'></iframe></div><div class='page'><iframe src='build/renders/page-4.html'></iframe></div><div class='page'><iframe src='build/renders/page-5.html'></iframe></div><div class='page'><iframe src='build/renders/page-6.html'></iframe></div><div class='page'><iframe src='build/renders/page-7.html'></iframe></div><div class='page'><iframe src='build/renders/page-8.html'></iframe></div>
+			<div class='page'><iframe src='build/renders/page-1.html'></iframe></div><div class='page'><iframe src='build/renders/page-2.html'></iframe></div><div class='page'><iframe src='build/renders/page-3.html'></iframe></div><div class='page'><iframe src='build/renders/page-4.html'></iframe></div><div class='page'><iframe src='build/renders/page-5.html'></iframe></div><div class='page'><iframe src='build/renders/page-6.html'></iframe></div><div class='page'><iframe src='build/renders/page-7.html'></iframe></div><div class='page'><iframe src='build/renders/page-8.html'></iframe></div><div class='page'><iframe src='build/renders/page-9.html'></iframe></div><div class='page'><iframe src='build/renders/page-10.html'></iframe></div><div class='page'><iframe src='build/renders/page-11.html'></iframe></div><div class='page'><iframe src='build/renders/page-12.html'></iframe></div><div class='page'><iframe src='build/renders/page-13.html'></iframe></div><div class='page'><iframe src='build/renders/page-14.html'></iframe></div><div class='page'><iframe src='build/renders/page-15.html'></iframe></div><div class='page'><iframe src='build/renders/page-16.html'></iframe></div><div class='page'><iframe src='build/renders/page-17.html'></iframe></div><div class='page'><iframe src='build/renders/page-18.html'></iframe></div><div class='page'><iframe src='build/renders/page-19.html'></iframe></div><div class='page'><iframe src='build/renders/page-20.html'></iframe></div><div class='page'><iframe src='build/renders/page-21.html'></iframe></div><div class='page'><iframe src='build/renders/page-22.html'></iframe></div><div class='page'><iframe src='build/renders/page-23.html'></iframe></div><div class='page'><iframe src='build/renders/page-24.html'></iframe></div><div class='page'><iframe src='build/renders/page-25.html'></iframe></div><div class='page'><iframe src='build/renders/page-26.html'></iframe></div><div class='page'><iframe src='build/renders/page-27.html'></iframe></div><div class='page'><iframe src='build/renders/page-28.html'></iframe></div>
 		</div>
 	</div>
-	<input type="hidden" id="bookname" value="a-guide-to-marketplaces" />
+	<input type="hidden" id="bookname" value=" A Guide to Marketplaces" />
 	<script src="crust/scripts/bookiza.js"></script>
 	<script src="crust/scripts/invoker.js"></script>
 
